# qbi-visualizer

./: .gitignore  DEPLOYMENT.md  QUICKSTART.md  README.md  SETUP.md  start.sh  vercel.json
.github/workflows/: test.yml
backend/: .env.example  modal_app.py  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/api/: calculator.py  law_structure.py  tax_form_mapping.py  taxsim_comparison.py  variables.py
backend/app/models/: law_structure.py  tax_form_mapping.py  taxsim_comparison.py  variable.py
backend/app/services/: calculator.py  code_extractor.py  formula_parser.py  github_manager.py  law_structure_builder.py  parameter_extractor.py  pe_parameters.py  tax_form_mapping.py  taxsim_comparison.py
backend/tests/: test_api.py  test_law_structure.py  test_pe_parameters.py  test_tax_form_mapping.py
frontend/: eslint.config.mjs  index.html  next.config.ts  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/public/: robots.txt  sitemap.xml
frontend/src/: App.css  App.tsx  index.css
frontend/src/app/: Header.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/src/app/forms/: page.tsx
frontend/src/app/law/: page.tsx
frontend/src/components/: InfoTooltip.tsx
frontend/src/data/: inputDefinitions.ts
frontend/src/pages/: CalculatorView.tsx  GraphView.tsx  LawView.tsx  NotFound.tsx  TaxFormView.tsx  TaxsimView.tsx
frontend/src/types/: law.ts  taxForm.ts  taxsim.ts
frontend/src/views/: CalculatorView.tsx  LawView.tsx  TaxFormView.tsx
